--- a/src/main/resources/org/cloudsmith/geppetto/forge/jenkins/ForgePublisher/help-forgeOAuthToken.html
+++ b/src/main/resources/org/cloudsmith/geppetto/forge/jenkins/ForgePublisher/help-forgeOAuthToken.html
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
- Copyright 2012-, Cloudsmith Inc.
+ Copyright 2013-, Cloudsmith Inc.
 
  Licensed under the Apache License, Version 2.0 (the "License"). You may not
  use this file except in compliance with the License. You may obtain a copy
@@ -13,5 +13,5 @@
  under the License.
 -->
 <div>
-  The Puppet Forge password. Required unless you enter the oauth token
+  The Puppet Forge OAuth token if applicable. Use login/password if you don't have this token.
 </div>
