--- a/src/main/resources/org/cloudsmith/geppetto/forge/jenkins/ForgeValidator/help-checkModuleSemantics.html
+++ b/src/main/resources/org/cloudsmith/geppetto/forge/jenkins/ForgeValidator/help-checkModuleSemantics.html
@@ -1,17 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
- Copyright 2013-, Cloudsmith Inc.
-
- Licensed under the Apache License, Version 2.0 (the "License"). You may not
- use this file except in compliance with the License. You may obtain a copy
- of the License at http://www.apache.org/licenses/LICENSE-2.0
-
- Unless required by applicable law or agreed to in writing, software
- distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
- WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
- License for the specific language governing permissions and limitations
- under the License.
--->
+  Copyright (c) 2013, Cloudsmith Inc.
+  The code, documentation and other materials contained herein
+  are the sole and exclusive property of Cloudsmith Inc. and may
+  not be disclosed, used, modified, copied or distributed without
+  prior written consent or license from Cloudsmith Inc.
+ -->
 <div>
   If checked, then the validator will make an attempt to resolve and install all dependencies for the modules that are
   validated. Dependencies are resolved transitively and unresolved dependencies are considered to be validation errors.
