Renames all org.cloudsmith => com.puppetlabs

--- a/src/main/resources/com/puppetlabs/geppetto/forge/jenkins/ForgePublisher/help-forgeLogin.html
+++ b/src/main/resources/com/puppetlabs/geppetto/forge/jenkins/ForgePublisher/help-forgeLogin.html
@@ -9,9 +9,6 @@
  Contributors:
    Puppet Labs
  -->
-<!--
-  This view is used to render the installed plugins page.
--->
 <div>
-  Validates and publishes Puppet Modules to the Puppet Forge.
+  The Puppet Forge login. Required unless you enter the oauth token
 </div>
