--- a/src/main/resources/com/puppetlabs/geppetto/forge/jenkins/ForgePublisher/help-publishOnlyIfSuccess.html
+++ b/src/main/resources/com/puppetlabs/geppetto/forge/jenkins/ForgePublisher/help-publishOnlyIfSuccess.html
@@ -9,9 +9,6 @@
  Contributors:
    Puppet Labs
  -->
-<!--
-  This view is used to render the installed plugins page.
--->
 <div>
-  Validates and publishes Puppet Modules to the Puppet Forge.
+  Only publish to the forge if the puppet validation succeeds - otherwise, nothing will be published.
 </div>
