--- a/src/main/resources/com/puppetlabs/geppetto/forge/jenkins/ForgePublisher/help-forgeOAuthToken.html
+++ b/src/main/resources/com/puppetlabs/geppetto/forge/jenkins/ForgePublisher/help-forgeOAuthToken.html
@@ -9,9 +9,6 @@
  Contributors:
    Puppet Labs
  -->
-<!--
-  This view is used to render the installed plugins page.
--->
 <div>
-  Validates and publishes Puppet Modules to the Puppet Forge.
+  The Puppet Forge OAuth token if applicable. Use login/password if you don't have this token.
 </div>
