--- a/src/main/resources/com/puppetlabs/geppetto/forge/jenkins/ForgeValidator/help-checkModuleSemantics.html
+++ b/src/main/resources/com/puppetlabs/geppetto/forge/jenkins/ForgeValidator/help-checkModuleSemantics.html
@@ -9,9 +9,7 @@
  Contributors:
    Puppet Labs
  -->
-<!--
-  This view is used to render the installed plugins page.
--->
 <div>
-  Validates and publishes Puppet Modules to the Puppet Forge.
+  If checked, then the validator will make an attempt to resolve and install all dependencies for the modules that are
+  validated. Dependencies are resolved transitively and unresolved dependencies are considered to be validation errors.
 </div>
