Make Validator and Builder separate build tasks.

--- a/src/main/resources/com/puppetlabs/geppetto/forge/jenkins/ForgePublisher/help-forgeServiceURL.html
+++ b/src/main/resources/com/puppetlabs/geppetto/forge/jenkins/ForgePublisher/help-forgeServiceURL.html
@@ -10,6 +10,5 @@
    Puppet Labs
  -->
 <div>
-  Only publish to the forge if the puppet validation succeeds - otherwise, nothing will be published. This option will be ignored
-  unless this build step is preceded by a puppet validation step.
+  The URL used when connecting to the Puppet Forge service.
 </div>
