--- a/src/main/resources/com/puppetlabs/geppetto/forge/jenkins/ForgeValidator/help-complianceLevel.html
+++ b/src/main/resources/com/puppetlabs/geppetto/forge/jenkins/ForgeValidator/help-complianceLevel.html
@@ -10,6 +10,5 @@
    Puppet Labs
  -->
 <div>
-  Only publish to the forge if the puppet validation succeeds - otherwise, nothing will be published. This option will be ignored
-  unless this build step is preceded by a puppet validation step.
+  The targeted Puppet version for the validation
 </div>
