(PF-828) Validate what versions of puppet a module will work with
This commit enables entry of two puppet versions (min and max) and
changes the logic so that all versions in the given range are
validated. It also adds an extra field where a json output file
can be entered. When present, that file will receive JSON output
for all validated versions.

--- a/src/main/resources/com/puppetlabs/geppetto/forge/jenkins/ForgeValidator/help-jsonResultPath.html
+++ b/src/main/resources/com/puppetlabs/geppetto/forge/jenkins/ForgeValidator/help-jsonResultPath.html
@@ -10,5 +10,5 @@
    Puppet Labs
  -->
 <div>
-  The minimum targeted Puppet version for the validation
+  A path to a file that will receive the validation result in JSON format. The path must be relative the workspace.
 </div>
