--- a/src/main/resources/com/puppetlabs/geppetto/forge/jenkins/ForgeValidator/help-maxComplianceLevel.html
+++ b/src/main/resources/com/puppetlabs/geppetto/forge/jenkins/ForgeValidator/help-maxComplianceLevel.html
@@ -10,5 +10,5 @@
    Puppet Labs
  -->
 <div>
-  The minimum targeted Puppet version for the validation
+  The maximum targeted Puppet version for the validation
 </div>
