More memory conservative use of injections

--- a/src/main/resources/com/puppetlabs/geppetto/forge/jenkins/ForgeValidator/help-produceGraph.html
+++ b/src/main/resources/com/puppetlabs/geppetto/forge/jenkins/ForgeValidator/help-produceGraph.html
@@ -10,5 +10,5 @@
    Puppet Labs
  -->
 <div>
-  If checked, then the validator extract type and provider documentation from ruby files.
+  Produce a dependency graph.
 </div>
